// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly no dates 1`] = `
<Calendar
  current={null}
  markedDates={Object {}}
  markingType="period"
  onDayPress={[Function]}
  theme={
    Object {
      "textDayFontFamily": "Roboto",
      "textDayFontSize": 16,
      "textDayHeaderFontFamily": "Roboto",
      "textDayHeaderFontSize": 16,
      "textMonthFontFamily": "Roboto",
      "textMonthFontSize": 16,
    }
  }
/>
`;

exports[`renders correctly only startDate 1`] = `
<Calendar
  current="2018-01-01"
  markedDates={
    Object {
      "2018-01-01": Object {
        "color": "rgb(51, 51, 51)",
        "endingDay": true,
        "startingDay": true,
        "textColor": "#ffffff",
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
  theme={
    Object {
      "textDayFontFamily": "Roboto",
      "textDayFontSize": 16,
      "textDayHeaderFontFamily": "Roboto",
      "textDayHeaderFontSize": 16,
      "textMonthFontFamily": "Roboto",
      "textMonthFontSize": 16,
    }
  }
/>
`;

exports[`renders correctly startDate after endDate 1`] = `
<Calendar
  current="2018-01-01"
  markedDates={
    Object {
      "2018-01-01": Object {
        "color": "rgb(51, 51, 51)",
        "startingDay": true,
        "textColor": "#ffffff",
      },
      "2018-01-02": Object {
        "color": "rgb(51, 51, 51)",
        "endingDay": true,
        "textColor": "#ffffff",
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
  theme={
    Object {
      "textDayFontFamily": "Roboto",
      "textDayFontSize": 16,
      "textDayHeaderFontFamily": "Roboto",
      "textDayHeaderFontSize": 16,
      "textMonthFontFamily": "Roboto",
      "textMonthFontSize": 16,
    }
  }
/>
`;

exports[`renders correctly startDate before endDate 1`] = `
<Calendar
  current="2018-01-01"
  markedDates={
    Object {
      "2018-01-01": Object {
        "color": "rgb(51, 51, 51)",
        "startingDay": true,
        "textColor": "#ffffff",
      },
      "2018-01-02": Object {
        "color": "rgb(51, 51, 51)",
        "endingDay": true,
        "textColor": "#ffffff",
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
  theme={
    Object {
      "textDayFontFamily": "Roboto",
      "textDayFontSize": 16,
      "textDayHeaderFontFamily": "Roboto",
      "textDayHeaderFontSize": 16,
      "textMonthFontFamily": "Roboto",
      "textMonthFontSize": 16,
    }
  }
/>
`;

exports[`renders correctly startDate equals endDate 1`] = `
<Calendar
  current="2018-01-01"
  markedDates={
    Object {
      "2018-01-01": Object {
        "color": "rgb(51, 51, 51)",
        "endingDay": true,
        "startingDay": true,
        "textColor": "#ffffff",
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
  theme={
    Object {
      "textDayFontFamily": "Roboto",
      "textDayFontSize": 16,
      "textDayHeaderFontFamily": "Roboto",
      "textDayHeaderFontSize": 16,
      "textMonthFontFamily": "Roboto",
      "textMonthFontSize": 16,
    }
  }
/>
`;
